-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 9.0.2
-
None
-
-
3dc775a6d (master)
hi,
in a consturctor i have to create an object from another object. so i try to write multiple lines (mark multiple lines and write on all of them at once)
for example:
property1
property2
property3
property4
mark all 4 lines, copy the text add the = from. and paste the property names i just copied =>
property1 = from.property4
property2 = from.property3
property3 = from.property2
property4 = from.property1
there you go, the names have changed order
i found a workaround for that:
again mark all lines, copy the text, paste the text (for some reason the order is not changed now), add the = from. and paste again =>
property1 = from.property1
property2 = from.property2
property3 = from.property3
property4 = from.property4
For Gerrit Dashboard: QTCREATORBUG-29117 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
476099,4 | MultiTextCursor: iterate over map entries | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |